0. Metadata
-----------
Copyright:		Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
License:		GNU General Public License version 2 or later; see LICENSE.txt

1. Copyright and disclaimer
---------------------------
This application is opensource software released under the GPL.  Please
see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-July-2012 Jean-Marie Simonet
 # [#28837] Can't get past step 4 "Database Configuration". Thanks Shaun.
 # [#28511] Move the caption behavior from the controller to the layouts in com_content. Thanks Rouven and Peter.

========== VERSION 3.0 APLHA 1 RELEASED ==========

13-July-2012 Jean-Marie Simonet
 ^ Merge of latest platform from 12.1+ Thanks Rouven